package name fixed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TomorrowsBuildNumber",
+  "name": "tomorrows-build-number",
   "version": "1.0.0",
   "main": "snippet.js",
   "author": "Thomas Bandixen",
